syntax = "proto3";
package main;

import "firebase_rules_options.proto";

option (google.firebase.rules.firebase_rules).full_package_names = true;

message RenewableBidHistory {
  string id = 1;
  string account_id = 2;
  uint32 price = 3;
  uint32 amount = 4;
  bool is_accepted = 5;
  uint32 contract_price = 6;
}
